force-app/main/default/objects/Failure_Group__c/Failure_Group__c.object-meta.xml
<CustomObject>
    <label>Failure Group</label>
    <pluralLabel>Failure Groups</pluralLabel>
    <nameField><label>Group Number</label><type>AutoNumber</type><displayFormat>FG-{00000}</displayFormat></nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>