force-app/main/default/objects/Failure_Group__c/fields/Element_Name__c.field-meta.xml
<CustomField><fullName>Element_Name__c</fullName><label>Element Name</label><length>255</length><type>Text</type></CustomField>