force-app/main/default/objects/Failure_Group__c/fields/Fingerprint__c.field-meta.xml
<CustomField><fullName>Fingerprint__c</fullName><label>Fingerprint</label><length>64</length><type>Text</type><externalId>true</externalId><unique>true</unique></CustomField>