force-app/main/default/objects/Failure_Group__c/fields/First_Seen__c.field-meta.xml
<CustomField><fullName>First_Seen__c</fullName><label>First Seen</label><type>DateTime</type></CustomField>