force-app/main/default/objects/Failure_Group__c/fields/Occurrence_Count__c.field-meta.xml
<CustomField><fullName>Occurrence_Count__c</fullName><label>Occurrence Count</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>