force-app/main/default/objects/Failure_Group__c/fields/Representative_Message__c.field-meta.xml
<CustomField><fullName>Representative_Message__c</fullName><label>Representative Message</label><length>4000</length><type>LongTextArea</type><visibleLines>8</visibleLines></CustomField>