force-app/main/default/objects/Failure_Group__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><value><fullName>New</fullName><default>true</default><label>New</label></value><value><fullName>Acknowledged</fullName><label>Acknowledged</label></value><value><fullName>Investigating</fullName><label>Investigating</label></value><value><fullName>Resolved</fullName><label>Resolved</label></value><value><fullName>Ignored</fullName><label>Ignored</label></value></valueSetDefinition></valueSet></CustomField>